# ros2-autonomous-thermal-health-monitoring

./: .gitignore  Dockerfile  README.md  docker-compose.yml
src/temp_monitor_pkg/: package.xml  setup.cfg  setup.py
src/temp_monitor_pkg/launch/: monitor.launch.py
src/temp_monitor_pkg/temp_monitor_pkg/: __init__.py  logger.py  temp_monitor.py  temp_sensor.py
